# Boneless-CPU

./: .gitignore  .travis.yml  LICENSE.md  README.md  pyproject.toml  setup.py
boneless/: __init__.py  cli.py  disasm.py  gateware.py  instr.py  test_disasm.py
boneless/arch/: asm.py  asm_v3.py  directives.py  disasm.py  instr.py  instr_v3.py  mc.py  opcode.py  opcode_v3.py
boneless/assembler/: TODO  asm.py  base.asm  build.py  commands.py  echo.asm  fillet.py  fixture.py  inc.asm  linker.py  macro.py  strings.asm  test.asm  test.py
boneless/assembler/asm/: .echo.asm.swp  basic.asm  echo.asm  forth.asm  monitor.asm
boneless/gateware/: __init__.py  alsru.py  control.py  core.py  core_fsm.py  core_v3.py  decoder.py  decoder_v3.py  formal.py  test_core.py
boneless/simulator/: __init__.py  instr.py  mon.asm  ptysim.py  rip.py  sim.py  terminal_test.py
boneless/test/: smoke.py  smoke_v3.py  test_alsru.py  test_asm.py  test_asm_v3.py  test_core.py  test_core_v3.py  test_disasm.py  test_instr.py  test_instr_v3.py
boneless_sim/: __init__.py  sim.py
boneless_sim/test/: common.py  test_except.py  test_idioms.py  test_insns.py
doc/: Makefile  design.ods  make.bat  requirements.txt
doc/manual/: .gitignore  build.sh  manual.tex
doc/source/: bonelesssim.rst  conf.py  index.rst
examples/: .gitignore  fillet.py  iceblink.pcf  iceblink.sv  run.sh
examples/asm/: base.asm  echo.asm  inc.asm  monitor.asm
examples/board/: ice40_hx1k_blink_evn.py
examples/software/: Makefile  toggle.asm
formal/: formal.sv  fsm_formal.sby  run.sh
gateware/: boneless.py
(+125 files in other folders)
